--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -259,7 +259,10 @@
                 <com.owen.tvrecyclerview.widget.TvRecyclerView
                     android:id="@+id/mGroupGridView"
                     android:background="#40000000"
-                    android:padding="10.0dip"
+                    android:paddingLeft="5.0mm"
+                    android:paddingTop="10.0mm"
+                    android:paddingRight="5.0mm"
+                    android:paddingBottom="10.0mm"
                     android:scrollbars="none"
                     android:layout_width="@dimen/vs_240"
                     android:layout_height="wrap_content"
@@ -318,7 +321,10 @@
                 android:layout_margin="0.0dip"/>
             <com.owen.tvrecyclerview.widget.TvRecyclerView
                 android:id="@+id/mChannelGridView"
-                android:padding="10.0dip"
+                android:paddingLeft="5.0mm"
+                android:paddingTop="10.0mm"
+                android:paddingRight="5.0mm"
+                android:paddingBottom="10.0mm"
                 android:focusable="true"
                 android:scrollbars="none"
                 android:layout_width="@dimen/vs_280"
@@ -387,16 +393,16 @@
                     android:layout_gravity="center_vertical"
                     android:id="@+id/mEpgDateGridView"
                     android:background="#40000000"
-                    android:paddingLeft="10.0mm"
-                    android:paddingTop="17.0mm"
-                    android:paddingRight="10.0mm"
+                    android:paddingLeft="5.0mm"
+                    android:paddingTop="10.0mm"
+                    android:paddingRight="5.0mm"
                     android:paddingBottom="10.0mm"
                     android:visibility="visible"
                     android:layout_width="@dimen/vs_100"
                     android:layout_height="fill_parent"
                     android:listSelector="@drawable/item_bg_selector_right"
                     app:tv_selectedItemIsCentered="true"
-                    app:tv_verticalSpacingWithMargins="18.0mm"/>
+                    app:tv_verticalSpacingWithMargins="10.0mm"/>
                 <LinearLayout
                     android:background="#4d000000"
                     android:layout_width="1.0dip"
@@ -405,7 +411,10 @@
                 <com.owen.tvrecyclerview.widget.TvRecyclerView
                     android:gravity="center"
                     android:id="@+id/lv_epg"
-                    android:padding="@dimen/vs_10"
+                    android:paddingLeft="5.0mm"
+                    android:paddingTop="10.0mm"
+                    android:paddingRight="5.0mm"
+                    android:paddingBottom="10.0mm"
                     android:visibility="visible"
                     android:scrollbars="vertical"
                     android:layout_width="fill_parent"
