--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -240,9 +240,9 @@
         android:orientation="horizontal"
         android:id="@+id/tvLeftChannnelListLayout"
         android:padding="0.0dip"
-        android:layout_width="810.0mm"
+        android:layout_width="820.0mm"
         android:layout_height="fill_parent"
-        android:layout_marginLeft="-810.0mm"
+        android:layout_marginLeft="-820.0mm"
         android:baselineAligned="false">
         <LinearLayout
             android:id="@+id/ll_typeSelect"
@@ -271,48 +271,56 @@
                     android:fadeScrollbars="false"/>
             </LinearLayout>
             <LinearLayout
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical"
-                android:id="@+id/divLoadEpgleft"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6.0dip"
-                android:layout_marginRight="2.0dip"
-                android:onClick="divLoadEpgLeft"
-                style="@style/epg_window_btn">
-                <TextView
-                    android:textStyle="bold"
-                    android:textColor="@color/color_FFFFFF"
-                    android:gravity="center"
-                    android:id="@+id/tv_arrow0"
-                    android:paddingBottom="5.0dip"
-                    android:layout_width="20.0dip"
-                    android:layout_height="fill_parent"
-                    android:text="更 多"
-                    android:shadowColor="#cc000000"
-                    android:shadowDx="5.0"
-                    android:shadowRadius="5.0"/>
-                <ImageView
-                    android:gravity="center"
-                    android:id="@+id/iv_arrow2"
-                    android:paddingLeft="0.0dip"
-                    android:paddingTop="5.0dip"
-                    android:layout_width="20.0dip"
-                    android:layout_height="20.0dip"
-                    android:src="@drawable/scrollviewleft"/>
-                <TextView
-                    android:textStyle="bold"
-                    android:textColor="@color/color_FFFFFF"
-                    android:gravity="center"
-                    android:id="@+id/tv_arrow3"
-                    android:paddingTop="10.0dip"
-                    android:layout_width="20.0dip"
-                    android:layout_height="fill_parent"
-                    android:text="节 目"
-                    android:shadowColor="#cc000000"
-                    android:shadowDx="5.0"
-                    android:shadowRadius="5.0"/>
+                android:background="#40000000"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_margin="0.0dip">
+                <LinearLayout
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:id="@+id/divLoadEpgleft"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6.0dip"
+                    android:layout_marginRight="2.0dip"
+                    android:onClick="divLoadEpgLeft"
+                    style="@style/epg_window_btn">
+                    <TextView
+                        android:textStyle="bold"
+                        android:textColor="@color/color_FFFFFF"
+                        android:gravity="center"
+                        android:id="@+id/tv_arrow0"
+                        android:paddingBottom="5.0dip"
+                        android:layout_width="26.0dip"
+                        android:layout_height="fill_parent"
+                        android:layout_marginTop="10.0dip"
+                        android:text="更 多"
+                        android:shadowColor="#cc000000"
+                        android:shadowDx="5.0"
+                        android:shadowRadius="5.0"/>
+                    <ImageView
+                        android:gravity="center"
+                        android:id="@+id/iv_arrow2"
+                        android:paddingLeft="0.0dip"
+                        android:paddingTop="5.0dip"
+                        android:layout_width="23.0dip"
+                        android:layout_height="23.0dip"
+                        android:src="@drawable/scrollviewleft"/>
+                    <TextView
+                        android:textStyle="bold"
+                        android:textColor="@color/color_FFFFFF"
+                        android:gravity="center"
+                        android:id="@+id/tv_arrow3"
+                        android:paddingTop="10.0dip"
+                        android:layout_width="26.0dip"
+                        android:layout_height="fill_parent"
+                        android:layout_marginBottom="10.0dip"
+                        android:text="节 目"
+                        android:shadowColor="#cc000000"
+                        android:shadowDx="5.0"
+                        android:shadowRadius="5.0"/>
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:background="#4d000000"
@@ -338,49 +346,56 @@
                 android:layout_height="fill_parent"
                 android:layout_margin="0.0dip"/>
             <LinearLayout
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical"
-                android:id="@+id/divLoadEpg"
-                android:nextFocusDown="@+id/mChannelGridView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2.0dip"
-                android:layout_marginRight="2.0dip"
-                android:onClick="divLoadEpgRight"
-                style="@style/epg_window_btn">
-                <TextView
-                    android:textStyle="bold"
-                    android:textColor="@color/color_FFFFFF"
-                    android:gravity="center"
-                    android:id="@+id/tv_arrow"
-                    android:paddingRight="0.0dip"
-                    android:paddingBottom="5.0dip"
-                    android:layout_width="20.0dip"
-                    android:layout_height="fill_parent"
-                    android:text="节 目"
-                    android:shadowColor="#cc000000"
-                    android:shadowDx="5.0"
-                    android:shadowRadius="5.0"/>
-                <ImageView
-                    android:gravity="center"
-                    android:id="@+id/iv_arrow"
-                    android:paddingTop="5.0dip"
-                    android:layout_width="20.0dip"
-                    android:layout_height="20.0dip"
-                    android:src="@drawable/scrollview"/>
-                <TextView
-                    android:textStyle="bold"
-                    android:textColor="@color/color_FFFFFF"
-                    android:gravity="center"
-                    android:id="@+id/tv_arrow2"
-                    android:paddingTop="10.0dip"
-                    android:paddingRight="0.0dip"
-                    android:layout_width="20.0dip"
-                    android:layout_height="fill_parent"
-                    android:text="信 息"
-                    android:shadowColor="#cc000000"
-                    android:shadowDx="5.0"
-                    android:shadowRadius="5.0"/>
+                android:background="@drawable/bg_list_xu"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_margin="0.0dip">
+                <LinearLayout
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:id="@+id/divLoadEpg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2.0dip"
+                    android:layout_marginRight="3.0dip"
+                    android:onClick="divLoadEpgRight"
+                    style="@style/epg_window_btn">
+                    <TextView
+                        android:textStyle="bold"
+                        android:textColor="@color/color_FFFFFF"
+                        android:gravity="center"
+                        android:id="@+id/tv_arrow"
+                        android:paddingRight="0.0dip"
+                        android:paddingBottom="5.0dip"
+                        android:layout_width="26.0dip"
+                        android:layout_height="fill_parent"
+                        android:layout_marginTop="10.0dip"
+                        android:text="节 目"
+                        android:shadowColor="#cc000000"
+                        android:shadowDx="5.0"
+                        android:shadowRadius="5.0"/>
+                    <ImageView
+                        android:gravity="center"
+                        android:id="@+id/iv_arrow"
+                        android:paddingTop="5.0dip"
+                        android:layout_width="23.0dip"
+                        android:layout_height="23.0dip"
+                        android:src="@drawable/scrollview"/>
+                    <TextView
+                        android:textStyle="bold"
+                        android:textColor="@color/color_FFFFFF"
+                        android:gravity="center"
+                        android:id="@+id/tv_arrow2"
+                        android:paddingTop="10.0dip"
+                        android:paddingRight="0.0dip"
+                        android:layout_width="26.0dip"
+                        android:layout_height="fill_parent"
+                        android:layout_marginBottom="10.0dip"
+                        android:text="信 息"
+                        android:shadowColor="#cc000000"
+                        android:shadowDx="5.0"
+                        android:shadowRadius="5.0"/>
+                </LinearLayout>
             </LinearLayout>
             <LinearLayout
                 android:layout_gravity="center_horizontal"
