--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -67,6 +67,18 @@
                 android:marqueeRepeatLimit="marquee_forever"/>
         </LinearLayout>
     </LinearLayout>
+	<TextView
+       android:textSize="@dimen/ts_40"
+       android:textColor="@android:color/white"
+       android:ellipsize="end"
+       android:layout_gravity="right|top"
+       android:id="@+id/tv_sys_time_xu"
+       android:paddingTop="@dimen/vs_30"
+       android:paddingRight="@dimen/vs_15"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="00:00:00"
+       android:maxLines="1"/>
     <LinearLayout
         android:gravity="top"
         android:layout_gravity="top"
