--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -71,8 +71,9 @@
        android:textSize="@dimen/ts_40"
        android:textColor="@android:color/white"
        android:ellipsize="end"
+	   android:visibility="gone"
        android:layout_gravity="right|top"
-       android:id="@+id/tv_sys_time_xu"
+       android:id="@+id/tvtime_xu"
        android:paddingTop="@dimen/vs_30"
        android:paddingRight="@dimen/vs_15"
        android:layout_width="wrap_content"
