--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -319,7 +319,7 @@
         <View
             android:id="@+id/view_bg"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/vs_100"
+            android:layout_height="@dimen/vs_90"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"/>
         <LinearLayout
@@ -329,6 +329,7 @@
             android:layout_width="@dimen/vs_240"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/vs_20"
+            android:layout_marginBottom="@dimen/vs_20"
             android:layout_marginRight="@dimen/vs_20">
             <TextView
                 android:textSize="@dimen/vs_150"
@@ -392,7 +393,7 @@
                 android:layout_gravity="bottom|center"
                 android:id="@+id/tv_channel_bar_name"
                 android:paddingTop="0.0dip"
-                android:paddingBottom="10.0dip"
+                android:paddingBottom="0mm"
                 android:layout_width="@dimen/vs_200"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0.0dip"
@@ -411,7 +412,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/vs_0"
-            android:layout_marginTop="167.0mm"
+            android:layout_marginTop="161.0mm"
             android:text=""
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
@@ -456,10 +457,10 @@
             android:id="@+id/view_line"
             android:background="#ff9e9e9e"
             android:layout_width="wrap_content"
-            android:layout_height="5.0mm"
-            android:layout_marginTop="17.0px"
+            android:layout_height="9.0mm"
+            android:layout_marginTop="20mm"
             android:layout_marginRight="48.0mm"
-            android:layout_marginBottom="20.0px"
+            android:layout_marginBottom="20mm"
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
             android:shadowRadius="5.0"
@@ -472,7 +473,7 @@
             android:id="@+id/tv_next_program"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/vs_30"
+            android:layout_marginBottom="16mm"
             android:text=""
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
@@ -522,7 +523,7 @@
             android:id="@+id/tv_source"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="176.0mm"
+            android:layout_marginTop="171.0mm"
             android:layout_marginRight="@dimen/vs_50"
             android:layout_marginBottom="@dimen/vs_0"
             android:text="源 1/1"
@@ -536,7 +537,7 @@
             android:id="@+id/live_icon_null_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60.0mm"
+            android:layout_marginTop="81.0mm"
             android:layout_marginRight="@dimen/vs_50"
             android:maxLines="1"
             android:singleLine="true"
@@ -626,9 +627,9 @@
             android:orientation="horizontal"
             android:background="@drawable/shape_dialog_filter_bg_1"
             android:layout_width="fill_parent"
-            android:layout_height="240.0px"
-            android:layout_marginTop="0.0px"
-            android:minWidth="270.0px"/>
+            android:layout_height="150mm"
+            android:layout_marginTop="0.0mm"
+            android:minWidth="270mm"/>
         <LinearLayout
             android:gravity="center"
             android:orientation="vertical"
@@ -656,9 +657,9 @@
             android:gravity="bottom"
             android:layout_gravity="bottom"
             android:orientation="vertical"
-            android:paddingLeft="10.0dip"
+            android:paddingLeft="10.0mm"
             android:paddingTop="0.0dip"
-            android:paddingRight="10.0dip"
+            android:paddingRight="10.0mm"
             android:paddingBottom="0.0dip"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/vs_300"
@@ -680,9 +681,9 @@
             <LinearLayout
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="150.0dip"
+                android:paddingLeft="270mm"
                 android:paddingTop="0.0dip"
-                android:paddingRight="20.0dip"
+                android:paddingRight="38mm"
                 android:paddingBottom="0.0dip"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/vs_150"
@@ -692,39 +693,39 @@
                 <ImageView
                     android:id="@+id/iv_playpause"
                     android:background="@drawable/vod_pause"
-                    android:layout_width="30.0dip"
-                    android:layout_height="30.0dip"/>
+                    android:layout_width="32.0mm"
+                    android:layout_height="32.0mm"/>
                 <TextView
                     android:textColor="#ffffffff"
                     android:id="@+id/tv_currentpos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10.0dip"
-                    android:layout_marginRight="5.0dip"
+                    android:layout_marginLeft="10.0mm"
+                    android:layout_marginRight="5.0mm"
                     android:text="00:00:00"/>
                 <SeekBar
                     android:id="@+id/pb_progressbar"
-                    android:padding="6.0dip"
-                    android:paddingLeft="5.0dip"
-                    android:paddingRight="5.0dip"
+                    android:padding="5mm"
+                    android:paddingLeft="5mm"
+                    android:paddingRight="5mm"
                     android:layout_width="0.0dip"
-                    android:layout_height="30.0dip"
-                    android:maxHeight="3.0dip"
-                    android:max="100"
+                    android:layout_height="30mm"
+                    android:maxHeight="9mm"
+                    android:max="200"
                     android:progress="30"
-                    android:progressDrawable="@drawable/shape_player_control_vod_seek"
-                    android:minHeight="3.0dip"
+                    android:progressDrawable="@drawable/shape_player_control_vod_seek_xu"
+                    android:minHeight="9mm"
                     android:thumb="@drawable/transparent"
                     android:thumbOffset="0.0dip"
                     android:layout_weight="1.0"
-                    android:paddingStart="5.0dip"
-                    android:paddingEnd="5.0dip"/>
+                    android:paddingStart="5mm"
+                    android:paddingEnd="5mm"/>
                 <TextView
                     android:textColor="#ffffffff"
                     android:id="@+id/tv_duration"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5.0dip"
+                    android:layout_marginLeft="5mm"
                     android:text="00:00:00"/>
             </LinearLayout>
         </LinearLayout>
