--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -329,8 +329,8 @@
             android:layout_width="@dimen/vs_240"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/vs_20"
-            android:layout_marginBottom="@dimen/vs_20"
-            android:layout_marginRight="@dimen/vs_20">
+            android:layout_marginRight="@dimen/vs_20"
+            android:layout_marginBottom="@dimen/vs_20">
             <TextView
                 android:textSize="@dimen/vs_150"
                 android:textColor="@color/color_90000000"
@@ -393,7 +393,7 @@
                 android:layout_gravity="bottom|center"
                 android:id="@+id/tv_channel_bar_name"
                 android:paddingTop="0.0dip"
-                android:paddingBottom="0mm"
+                android:paddingBottom="0.0mm"
                 android:layout_width="@dimen/vs_200"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0.0dip"
@@ -452,20 +452,22 @@
             android:layout_toRightOf="@+id/tv_current_program_time"
             android:layout_alignTop="@+id/tv_current_program"
             android:marqueeRepeatLimit="marquee_forever"/>
-        <View
+        <ProgressBar
+            android:layout_gravity="bottom"
             android:textStyle="bold"
             android:id="@+id/view_line"
-            android:background="#ff9e9e9e"
-            android:layout_width="wrap_content"
+            android:background="#00000000"
+            android:layout_width="fill_parent"
             android:layout_height="9.0mm"
-            android:layout_marginTop="20mm"
+            android:layout_marginTop="20.0mm"
             android:layout_marginRight="48.0mm"
-            android:layout_marginBottom="20mm"
+            android:layout_marginBottom="20.0mm"
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
             android:shadowRadius="5.0"
             android:layout_below="@+id/tv_current_program_name"
-            android:layout_alignLeft="@+id/tv_current_program"/>
+            android:layout_alignLeft="@+id/tv_current_program"
+            style="@style/progressbarStyle_Xu"/>
         <TextView
             android:textSize="@dimen/ts_26"
             android:textStyle="bold"
@@ -473,7 +475,7 @@
             android:id="@+id/tv_next_program"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16mm"
+            android:layout_marginBottom="16.0mm"
             android:text=""
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
@@ -627,9 +629,9 @@
             android:orientation="horizontal"
             android:background="@drawable/shape_dialog_filter_bg_1"
             android:layout_width="fill_parent"
-            android:layout_height="150mm"
+            android:layout_height="150.0mm"
             android:layout_marginTop="0.0mm"
-            android:minWidth="270mm"/>
+            android:minWidth="270.0mm"/>
         <LinearLayout
             android:gravity="center"
             android:orientation="vertical"
@@ -681,9 +683,9 @@
             <LinearLayout
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingLeft="270mm"
+                android:paddingLeft="270.0mm"
                 android:paddingTop="0.0dip"
-                android:paddingRight="38mm"
+                android:paddingRight="38.0mm"
                 android:paddingBottom="0.0dip"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/vs_150"
@@ -705,27 +707,27 @@
                     android:text="00:00:00"/>
                 <SeekBar
                     android:id="@+id/pb_progressbar"
-                    android:padding="5mm"
-                    android:paddingLeft="5mm"
-                    android:paddingRight="5mm"
+                    android:padding="5.0mm"
+                    android:paddingLeft="5.0mm"
+                    android:paddingRight="5.0mm"
                     android:layout_width="0.0dip"
-                    android:layout_height="30mm"
-                    android:maxHeight="9mm"
+                    android:layout_height="30.0mm"
+                    android:maxHeight="9.0mm"
                     android:max="200"
                     android:progress="30"
-                    android:progressDrawable="@drawable/shape_player_control_vod_seek_xu"
-                    android:minHeight="9mm"
+                    android:progressDrawable="@drawable/progress_bar_xu"
+                    android:minHeight="9.0mm"
                     android:thumb="@drawable/transparent"
                     android:thumbOffset="0.0dip"
                     android:layout_weight="1.0"
-                    android:paddingStart="5mm"
-                    android:paddingEnd="5mm"/>
+                    android:paddingStart="5.0mm"
+                    android:paddingEnd="5.0mm"/>
                 <TextView
                     android:textColor="#ffffffff"
                     android:id="@+id/tv_duration"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5mm"
+                    android:layout_marginLeft="5.0mm"
                     android:text="00:00:00"/>
             </LinearLayout>
         </LinearLayout>
