--- a/app/src/main/res/drawable/shape_thumb_bottom_name.xml
+++ b/app/src/main/res/drawable/shape_thumb_bottom_name.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:bottomLeftRadius="@dimen/vs_10"
-        android:bottomRightRadius="@dimen/vs_10" />
-    <solid android:color="@color/color_99000000" />
+        android:bottomLeftRadius="@dimen/vs_5"
+        android:bottomRightRadius="@dimen/vs_5" />
+    <solid
+        android:color="@color/color_99000000" />
 </shape>
