--- a/app/src/main/res/drawable/shape_user_focus_1.xml
+++ b/app/src/main/res/drawable/shape_user_focus_1.xml
@@ -2,17 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape>
-            <corners android:radius="7.0mm"/>
+            <corners android:radius="6.0mm"/>
             <stroke
                 android:width="2.0mm"
                 android:color="@color/color_FFFFFF"/>
-            <solid android:color="@color/color_6C3D3D3D"/>
+            <solid android:color="@color/color_3D3D3D"/>
         </shape>
     </item>
     <item android:state_focused="false">
         <shape>
-            <corners android:radius="7.0mm"/>
-            <solid android:color="@color/color_6C3D3D3D"/>
+            <corners android:radius="8.0mm"/>
+            <solid android:color="@color/color_3D3D3D"/>
         </shape>
     </item>
 </selector>
